[package]
name = "unicorn-factory"
version = "0.1.0"
description = "Unicorn Factory Launchpad for AI Startups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unicorn_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18.11"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[patch.crates-io]
zeroize = "=1.3.0"
